# mcp-nixreview

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.in
.github/workflows/: ci.yml
samples/: sample-nixos.diff  sample-vulnix.json
src/mcp_nixreview/: __init__.py  config.py  healthcheck.py  logging_setup.py  server.py  store.py
src/mcp_nixreview/clients/: __init__.py  kev.py
src/mcp_nixreview/review/: __init__.py  diff.py  vulnix.py
tests/: test_diff.py  test_store.py  test_vulnix.py
